# An-implementation-of-a-simple-virtual-machine-aimed-at-C-CPP-code-obfuscation

./: README.md
XXXVMP/AST/: CMakeLists.txt  ExternalFunctionCollector.cpp
XXXVMP/AttrProtected/: AttrPlugin.cpp  CMakeLists.txt
XXXVMP/Cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
XXXVMP/Gbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
XXXVMP/GenStub/: CMakeLists.txt  GenStub.cpp
XXXVMP/Vmp/: CMakeLists.txt  Linker.cpp  Linker.hpp  Pass.h  VMPinterface.h  XXXInst.hpp  XXXTypeGen.cpp  XXXTypeGen.hpp  XXXVMPCTX.cpp  XXXVMPCTX.h
XXXVMP/XXX/: AntiDebug.h  FakeBranch.hpp  VMP  VMPInterface.h  XXXVMPCore.cpp  XXXVMPCore.h
XXXVMP/XXXClang/: CMakeLists.txt  GenStub.h  XXXClang.cpp  createSection.h
XXXVMP/clangRewrite/: CMakeLists.txt  ReWrite.cpp
